--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <title>Dropdowns</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        
+      .dropdown:hover .dropdown-content {
+    display: block;
+      } 
+    .dropdown-content {
+    display: none;
+    }
     </style>
 </head>
 
