--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       .dropdown:hover .dropdown-content {
     display: block;
       } 
-    .dropdown-content {
+    .drop-down-content {
     display: none;
     }
     </style>
