--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Dropdowns</title>
     <link rel="stylesheet" href="style.css">
     <style>
-      .dropdown:hover .dropdown-content {
+      .dropdown:hover .drop-down-content {
     display: block;
       } 
     .drop-down-content {
