--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <title>Dropdowns</title>
     <link rel="stylesheet" href="style.css">
     <style>
-      .dropdown:hover .drop-down-content {
+      .drop-down:hover .drop-down-content {
     display: block;
       } 
     .drop-down-content {
     display: none;
     }
+   
     </style>
 </head>
 
